Fix: prevent overflow in MicromagPreview

--- a/packages/viewer/src/styles/partials/micromag-preview.module.scss
+++ b/packages/viewer/src/styles/partials/micromag-preview.module.scss
@@ -9,6 +9,7 @@
 
 .cover {
     margin-right: 0.5rem;
+    overflow: hidden;
 }
 
 .info {
@@ -22,9 +23,9 @@
 
 .container {
     .title {
+        margin-bottom: 0.25rem;
         font-family: Helvetica, Arial, sans-serif !important; // @todo find a better way to avoid clashing CSS styles
         font-size: 1.1rem !important;
         font-weight: 700;
-        margin-bottom: 0.25rem;
     }
 }
